// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders Header 1`] = `
<div
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <header
    className="MuiPaper-root-9 MuiPaper-elevation4-15 MuiAppBar-root-1 MuiAppBar-positionStatic-5 MuiAppBar-colorPrimary-7"
    style={
      Object {
        "backgroundColor": "white",
        "boxShadow": "none",
        "marginTop": "1%",
      }
    }
  >
    <div
      className="MuiToolbar-root-36 MuiToolbar-regular-38 MuiToolbar-gutters-37"
    >
      <div
        style={
          Object {
            "flex": 1,
          }
        }
      />
      <div
        style={
          Object {
            "flex": 2,
          }
        }
      >
        <h1
          className="MuiTypography-root-40 MuiTypography-display1-44 MuiTypography-colorInherit-59"
          style={
            Object {
              "textAlign": "center",
            }
          }
        >
          <a
            href="/"
            onClick={[Function]}
            style={
              Object {
                "color": "#333",
                "fontWeight": 600,
                "textDecoration": "none",
              }
            }
          >
            Hexanews
          </a>
        </h1>
      </div>
      <div
        style={
          Object {
            "display": "flex",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <div
          style={
            Object {
              "display": "flex",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <h2
            className="MuiTypography-root-40 MuiTypography-title-46 MuiTypography-colorInherit-59"
            style={
              Object {
                "alignSelf": "center",
                "marginLeft": 8,
              }
            }
          >
            <span
              onClick={[Function]}
              style={
                Object {
                  "alignSelf": "center",
                  "color": "#333",
                  "cursor": "pointer",
                  "marginRight": 24,
                  "textDecoration": "none",
                }
              }
            >
              Sign in
            </span>
          </h2>
          <button
            aria-label="Search"
            className="MuiButtonBase-root-71 MuiIconButton-root-65"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "marginLeft": -12,
                "marginRight": 20,
              }
            }
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-70"
            >
              <a
                href="/searchArticle"
                onClick={[Function]}
                style={
                  Object {
                    "color": "#333",
                    "textDecoration": "none",
                  }
                }
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-74"
                  color={undefined}
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </a>
            </span>
            <span
              className="MuiTouchRipple-root-81"
            />
          </button>
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`Header renders Header with isLoggedIn true 1`] = `
<div
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <header
    className="MuiPaper-root-9 MuiPaper-elevation4-15 MuiAppBar-root-1 MuiAppBar-positionStatic-5 MuiAppBar-colorPrimary-7"
    style={
      Object {
        "backgroundColor": "white",
        "boxShadow": "none",
        "marginTop": "1%",
      }
    }
  >
    <div
      className="MuiToolbar-root-36 MuiToolbar-regular-38 MuiToolbar-gutters-37"
    >
      <div
        style={
          Object {
            "flex": 1,
          }
        }
      />
      <div
        style={
          Object {
            "flex": 2,
          }
        }
      >
        <h1
          className="MuiTypography-root-40 MuiTypography-display1-44 MuiTypography-colorInherit-59"
          style={
            Object {
              "textAlign": "center",
            }
          }
        >
          <a
            href="/"
            onClick={[Function]}
            style={
              Object {
                "color": "#333",
                "fontWeight": 600,
                "textDecoration": "none",
              }
            }
          >
            Hexanews
          </a>
        </h1>
      </div>
      <div
        style={
          Object {
            "display": "flex",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <div
          style={
            Object {
              "display": "flex",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <h2
            className="MuiTypography-root-40 MuiTypography-title-46 MuiTypography-colorInherit-59"
            style={
              Object {
                "alignSelf": "center",
                "marginLeft": 8,
              }
            }
          >
            <a
              href="/profile"
              onClick={[Function]}
              style={
                Object {
                  "alignSelf": "center",
                  "color": "#333",
                  "marginRight": 32,
                  "textDecoration": "none",
                }
              }
            >
              Profile
            </a>
          </h2>
          <button
            aria-label="Search"
            className="MuiButtonBase-root-71 MuiIconButton-root-65"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "marginLeft": -12,
                "marginRight": 20,
              }
            }
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-70"
            >
              <a
                href="/searchArticle"
                onClick={[Function]}
                style={
                  Object {
                    "color": "#333",
                    "textDecoration": "none",
                  }
                }
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-74"
                  color={undefined}
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </a>
            </span>
            <span
              className="MuiTouchRipple-root-81"
            />
          </button>
          <button
            aria-label="Create"
            className="MuiButtonBase-root-71 MuiIconButton-root-65"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "marginLeft": -12,
                "marginRight": 20,
              }
            }
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-70"
            >
              <a
                href="/createArticle"
                onClick={[Function]}
                style={
                  Object {
                    "color": "#333",
                    "textDecoration": "none",
                  }
                }
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-74"
                  color={undefined}
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </a>
            </span>
            <span
              className="MuiTouchRipple-root-81"
            />
          </button>
          <button
            aria-label="Logout"
            className="MuiButtonBase-root-71 MuiIconButton-root-65"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "marginLeft": -12,
                "marginRight": 20,
              }
            }
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-70"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-74"
                color={undefined}
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M10.09 15.59L11.5 17l5-5-5-5-1.41 1.41L12.67 11H3v2h9.67l-2.58 2.59zM19 3H5c-1.11 0-2 .9-2 2v4h2V5h14v14H5v-4H3v4c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-81"
            />
          </button>
        </div>
      </div>
    </div>
  </header>
</div>
`;
